--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Oct 25 22:34:13 CEST 2022
-sdk.dir=C\:\\Users\\MohammedAbu\\AppData\\Local\\Android\\Sdk
+#Fri Oct 28 18:17:39 CEST 2022
+sdk.dir=C\:\\Users\\Mohammed Abubeker\\AppData\\Local\\Android\\Sdk
